--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "github-markdown-css": "^4.0.0",
+    "i18next": "^19.5.4",
+    "i18next-browser-languagedetector": "^5.0.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.0",
     "react-markdown": "^4.3.1",
     "react-monaco-editor": "^0.36.0",
     "react-router-dom": "^5.2.0",
