--- a/vblog-ui/package.json
+++ b/vblog-ui/package.json
@@ -20,6 +20,7 @@
     "react-monaco-editor": "^0.36.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-splitter-layout": "^4.0.0",
     "react-syntax-highlighter": "^12.2.1",
     "universal-cookie": "^4.0.3"
   },
