--- a/vblog-ui/package.json
+++ b/vblog-ui/package.json
@@ -11,7 +11,10 @@
     "github-markdown-css": "^4.0.0",
     "i18next": "^19.5.4",
     "i18next-browser-languagedetector": "^5.0.0",
+    "install": "^0.13.0",
     "monaco-editor-webpack-plugin": "^1.9.0",
+    "node-sass": "^4.14.1",
+    "npm": "^6.14.7",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.6",
     "react-dom": "^16.13.1",
@@ -22,7 +25,8 @@
     "react-scripts": "3.4.1",
     "react-splitter-layout": "^4.0.0",
     "react-syntax-highlighter": "^12.2.1",
-    "universal-cookie": "^4.0.3"
+    "universal-cookie": "^4.0.3",
+    "vditor": "^3.3.10"
   },
   "scripts": {
     "start": "react-app-rewired start",
