--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,36 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs: 
+  ui-build:
+    runs-on: ubuntu-latest 
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup Node.js environment
+        uses: actions/setup-node@v2.1.1
+      
+      - name: Cache Node.js modules
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm 
+          key: ${{ runner.OS }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.OS }}-node-
+            ${{ runner.OS }}-
+            
+      - name: Install dependencies
+        working-directory: vblog-ui
+        run: npm install
+      
+      - name: Build npm package
+        working-directory: vblog-ui
+        run: npm run build --if-present
+      
+      - name: Upload server build artifact
+        uses: actions/upload-artifact@v2
+        with: 
+          path: vblog-ui/build/** 
+      
+      
   # Build Vblog server and deploy
   server-build:
     runs-on: ubuntu-latest
@@ -42,6 +72,7 @@ jobs:
         path: vblog-server/target/*.jar 
   
   server-deploy:
+    needs: [server-build]
     runs-on: ubuntu-latest
     steps:
     - name: copy file via ssh password
