--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,8 @@ jobs:
       
       - name: Build npm package
         working-directory: vblog-ui
+        env:
+          CI: ""
         run: npm run build --if-present
       
       - name: Upload server build artifact
@@ -43,7 +45,7 @@ jobs:
       
       
   # Build Vblog server and deploy
-  server-build:
+  server-build-deploy:
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -61,7 +63,7 @@ jobs:
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
   
-    # Runs a single command using the runners shell
+
     - name: Build server
       working-directory: vblog-server
       run: mvn -B package --file pom.xml
@@ -71,10 +73,6 @@ jobs:
       with: 
         path: vblog-server/target/*.jar 
   
-  server-deploy:
-    needs: [server-build]
-    runs-on: ubuntu-latest
-    steps:
     - name: copy file via ssh password
       uses: appleboy/scp-action@master
       with:
