--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,6 +83,7 @@ jobs:
     - name: Upload server build artifact
       uses: actions/upload-artifact@v2
       with: 
+        name: vblog-server
         path: vblog-server/target/*.jar 
   
     - name: copy file via ssh password
