--- a/vblog-ui/package.json
+++ b/vblog-ui/package.json
@@ -29,7 +29,7 @@
     "vditor": "^3.3.10"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "PORT=8000 react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
